# Multitask

./: .gitignore  CHANGES_SUMMARY.md  QUICK_START.md  pyproject.toml
multitask/: experiment.py  gridstatus_api.py  models.py  multi_datasets.py  plotter.py  preprocess_gridstatus_dataset.py
multitask/data/: gridstatus_api.py  merge_nrl_downloads.py  nrl_api.py  preprocess_gridstatus_dataset.py
multitask/data_provider/: data_providers.py  multi_datasets.py
multitask/models/: baselines.py  model_trials.py  models.py
multitask/utils/: logger.py  plotter.py  plotter_results.py  utils.py
src/multitask/: experiment.py  gridstatus_api.py  models.py  multi_datasets.py  plotter.py  preprocess_gridstatus_dataset.py
src/multitask/experiments/: basic.py
tests/: test_transformations.py
