[project]
name = "multitask"
version = "0.1.0"
description = ""
authors = [
    {name = "BasilJ-S",email = "18bjjs@queensu.ca"}
]
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "datasets (>=4.4.1,<5.0.0)",
    "torch (>=2.9.1,<3.0.0)",
    "tensorly (>=0.9.0,<0.10.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "pytest (>=9.0.1,<10.0.0)",
    "gridstatusio (>=0.15.0,<0.16.0)",
    "keyring (>=25.7.0,<26.0.0)",
    "xgboost (>=3.1.2,<4.0.0)"
]

[tool.poetry]
packages = [{include = "multitask", from = "./"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
